--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -9,6 +9,9 @@ jobs:
     env:
       RUSTFLAGS: "-D warnings"
     steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v4
+
       - name: Rust Cache
         uses: Swatinem/rust-cache@v2
 
