clean up workspace

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 members = [
     "pest-csv",
     "pest-calc-tutorial",
-    "pest-ini"
-, "pest-json"]
+    "pest-ini",
+    "pest-json"
+]
 resolver = "2"
